--- a/AW1-Luk/styles.css
+++ b/AW1-Luk/styles.css
@@ -27,7 +27,6 @@ body {
   background-color: #f9f9f9;
 }
 
-/* Theme Styles */
 
 body.dark-theme {
   background-color: #333;
@@ -81,7 +80,6 @@ header nav a {
   text-decoration: none;
 }
 
-/* Carousel Styles */
 
 .carousel-container {
   position: relative;
@@ -188,7 +186,6 @@ header nav a {
   background-color: #333;
 }
 
-/* Blog Posts Styles */
 
 .blog-posts {
   max-width: 800px;
@@ -208,7 +205,6 @@ article h2 {
   margin-top: 0;
 }
 
-/* Footer Styles */
 
 footer {
   background-color: #333;
@@ -260,7 +256,7 @@ footer {
   }
 }
 
-/* Mobile Devices */
+/* Mobile */
 @media (max-width: 480px) {
   header {
     display: flex;
@@ -285,7 +281,7 @@ footer {
   }
 
   .carousel {
-    width: 90%; /* Reduce width for mobile devices */
+    width: 90%; 
     margin: 10px auto;
     padding: 5px;
     border: none;
